# iP6-Plus-Emulator

./: .gitignore  .qmake.stash  LICENSE  Makefile.am  README.md  configure.ac
Win_Project/: Makefile.am  UpgradeLog.htm  iP6.sln  ip6plus.psess  ip6plus.sln  ip6plus.vcxproj
doc/: BUGS.html  HELP-4.8.html  HISTORY.html  Makefile.am  d7752.txt  d7752e.txt  style.css
rom/: dummy.txt
src/: .Refresh.h.swp  Build.h  Codes.h  CodesCB.h  CodesED.h  CodesXCB.h  CodesXX.h  Debug.c  Debug.h  Help.h  Makefile.am  OpenAL.c  OpenAL.h  Option.c  Option.h  P6.c  P6.h  PC66SR.icns  Pd7752.c  Pd7752.h  Refresh.c  Refresh.h  SThread.h  Sound.c  Sound.h  Tables.h  Timer.h  Video.h  Z80.c  Z80.h  autokey.c  autokey.h  bmp.c  buffer.c  buffer.h  cgrom.h  chkcrc32.c  chkcrc32.h  cmu800.c  cmu800.h  (+50 more)
src/compatible_rom/: Makefile.am  basicrom60.h  basicrom66.h  cgrom60.h  cgrom6066.h  cgrom6666.h  cnv.bat  exkanjirom.h  kanjirom66.h  voicerom66.h
src/compatible_rom/CGROM60/: README.txt  c_CGROM60.60n
src/compatible_rom/basic60-v072/src/: basicrom.lst
src/compatible_rom/basic66-v022/: Makefile.am
src/compatible_rom/basic66-v031/src/: basicrom.lst  voicerom.lst
src/compatible_rom/font66/: c_CGROM60.66n  c_EXKANJI.ROMn  cnv1.bat
src/fmgen/: Makefile.am  file.cpp  fmgen.cpp  fmgen.h  fmgeninl.h  fmtimer.h  headers.h  opm.cpp  opm.h  opna.cpp  opna.h  psg.cpp  psg.h  types.h
src/font/: sam1.c  shnmk14.h  update.bat
src/sysdep/: Makefile.am  sysdep_dsp_priv.h
src/unix/: CoreAudio.h  Makefile.am  Thread.c  Timer.c  Unix.c  Unix.h  Xconf.c  Xconf.h  Xconfdef.h  log.txt  oldKeydef.h  ossSound.h  unixFullscr.c
src/win/: Makefile.am  Win32.c  Win32.h  Win32Timer.c  Win32fscr.c  Win32fscr.h  Win32gui.c  Win32gui.h  Win32stick.c  Win32stick.h  WinInput.h  WinKanji.c  WinMenu.h  WinSound.h  WinThread.c  directsound.c  rename.sh  waveout.c  waveout.h  winInput.cpp
tools/: bdf2header.c  bin2c.c  com.bat  ip6plus_new_kanji.c  ip6plus_new_kanji.mak  ip6plus_new_kanji.txt
