#
#   ./Makefile.am
#
bin_PROGRAMS= iP6



iP6_LDADD   = unix/libunix.a fmgen/libfmgen.a   

#noinst_LIBRARIES = libvm.a
SUBDIRS=unix fmgen  win sysdep compatible_rom

# libvm_a_SOURCES 
iP6_SOURCES = \
iP6.c \
autokey.c \
autokey.h \
Build.h \
bmp.c \
Codes.h \
CodesCB.h \
CodesED.h \
CodesXCB.h \
CodesXX.h \
chkcrc32.c \
chkcrc32.h \
conv.c \
conv.h \
Debug.c \
Debug.h \
dokodemo.c \
dokodemo.h \
font6x10.c \
font6x10.h \
Help.h \
OpenAL.c \
OpenAL.h \
Option.c \
Option.h \
P6.c \
P6.h \
Refresh.c \
Refresh.h \
Sound.c \
Sound.h \
sym_basic60.h \
sym_basic62.h \
sym_basic66.h \
Tables.h \
Z80.c \
Z80.h \
buffer.c \
buffer.h \
cgrom.h \
cycles.h \
Pd7752.c \
Pd7752.h \
d88.c \
d88.h \
device.c \
device.h \
disk.c \
disk.h \
error.c \
error.h \
extkanji.h \
fdc.c \
fdc.h \
fm.h \
mem.c \
mem.h \
message.c \
message.h \
newkeydef.h \
os.h \
pngrw.c \
pngrw.h \
SThread.h \
Timer.h \
types.h \
voice.c \
voice.h \
Video.h \
wav.c \
wav.h \
schedule.c \
schedule.h  \
keys.h \
fm.cpp 




EXTRA_DIST = \
PC66SR.bmp \
PC66SR.ico \
PC66SR.icns \
iP6.RES \
iP6.rc  

