#
#    ./win/Makefile.am
#

noinst_LIBRARIES= libwin.a
libwin_a_SOURCES = \
Win32.c \
Win32.h \
Win32fscr.c  \
Win32fscr.h  \
Win32stick.c \
Win32stick.h \
WinThread.c \
WinKanji.c \
WinMenu.h \
WinSound.h \
Win32gui.c \
Win32gui.h \
Win32Timer.c \
directsound.c \
waveout.c \
waveout.h


EXTRA_DIST= dummy.txt 

